# rust-restapi-with-role

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml
migrations/2024-04-18-033603_create_companies/: down.sql  up.sql
migrations/2024-04-18-033618_create_projects/: up.sql
migrations/2024-04-21-032025_create_users/: up.sql
migrations/2024-04-21-032050_create_roles/: up.sql
migrations/2024-04-21-032057_create_users_roles/: down.sql  up.sql
src/: auth.rs  commands.rs  lib.rs  models.rs  repositories.rs  schema.rs
src/routes/: authorization.rs  companies.rs  mod.rs  projects.rs
tests/: authorization.rs  company_test.rs  project_test.rs
tests/common/: mod.rs
