[package]
name = "cr8s"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = [
    "diesel_postgres",
    "deadpool_redis",
] }

diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
# serialize model ke json
serde_json = "1.0"

# For logging
log = "0.4.14"

clap = "4.4"

# For loading environment variables
dotenv = "0.15.0"
tokio = "1"

argon2 = "0.5"
rand = "0.8"


[dev-dependencies]
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
